test/conformance/chainsaw/cli/two-results-with-namespace/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-valid1
  labels:
    a: "1"
spec:
  containers:
  - image: busybox:1.28
    name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: test-valid2
  labels:
    a: "1"
    test: "not-equal"
spec:
  containers:
  - image: busybox:1.28
    name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: test-valid3
  labels:
    a: "1"
spec:
  containers:
  - image: busybox:1.28
    name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: test-invalid
  labels:
    a: "2"
spec:
  containers:
  - image: busybox:1.28
    name: busybox
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    aadobjectid: 51e5fe10-5325-4a32-bce8-7ebe9708
  name: test-invalid
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    aadobjectid: 51e5fe10-5325-4a32-9ce8-7ebe97087ebe
  name: test-valid
