test/conformance/chainsaw/cli/two-results-with-namespace/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test
spec:
  steps:
  - name: two-results-with-namespace
    try:
    - script:
        content: kyverno test .
        check:
          ($error != null): true
          ($stderr): "Error: failed to run test (The policy named default/test-jmespath cannot be found.)"
