test/conformance/chainsaw/cli/two-results-with-namespace/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: default/test-jmespath
  resources:
  - test-invalid
  result: fail
  rule: test-jmespath
- kind: Pod
  policy: test-jmespath
  resources:
  - test-valid1
  - test-valid2
  - test-valid3
  result: pass
  rule: test-jmespath
- kind: Namespace
  policy: namespacevalidation
  resources:
  - test-invalid
  result: fail
  rule: namespace-validation
- kind: Namespace
  policy: namespace-validation
  resources:
  - test-valid
  result: pass
  rule: namespace-validation
